Created by Local Git

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     markerRoots[i] = new THREE.Group();
                 }
   
-                // Проходимо по кожному маркеру з масиву і додаємо його в головний контейнер
+                // Проходимо по кожному маркеру з масиву і додаємо його в головний контейнер.
                 for (let i = 0; i < 3; i++) {
                     mainContainer.add(markerRoots[i]);
 
