--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 // Масив назв файлів .patt. Масив заповнюється в порядку додавання маркерів
                 // якщо замість .patt було додано баркод, на його місце в масив додається порожній рядок
-                const patternNames = ["pattern-png-clipart-question-mark-graphy-big-question-mark-text-trademark" ,"" ,""];
+                const patternNames = ["pattern-png-clipart-question-mark-graphy-big-question-mark-text-trademark.patt" ,"" ,""];
                 // Масив баркодів, заповнюється одночасно з масивом патернів
                 // якщо замість баркоду був доданий .patt, на його місце масив додається -1
                 const patternBarcode = [-1 ,2 ,3];
